# DUConv

./: .gitignore  LICENSE  README.md  pyproject.toml
dataconverter/: __init__.py  __main__.py  bytesconvert.py  convert.py  main.py
duconv/: __init__.py  __main__.py  bytesconvert.py  main.py
tests/: test_bytesconvert.py  test_convert.py
